2002-10-16  Alexandre Duret-Lutz  <adl@gnu.org>

	* tests/ansi6.test, tests/ansi7.test: Set ac_cv_prog_cc_stdc instead
	of am_cv_prog_cc_stdc.  This follows Akim's patch of 2002-10-09,
	and reveals a bug in my patch of 2002-10-15.
	* automake.in (handle_single_transform_list): Strip directory name
	from $full_ansi if subdir-objects is not set.

	* lib/texinfo.tex: New version from Texinfo 4.2b.

2002-10-15  Alexandre Duret-Lutz  <adl@gnu.org>

	* automake.in (handle_single_transform_list) <full_ansi>: New variable.
	Use this to record correct dependencies about deansifiable files which
	are using per-program flags or are in a subdirectory.
	* tests/ansi9.test: New file.
	* tests/Makefile.am (TESTS): Add ansi9.test.
	Reported by Paul D. Smith

2002-10-12  Alexandre Duret-Lutz  <adl@gnu.org>

	* aclocal.in (ac_defun_rx, ac_require_rx): If the macro name is
	quoted, accept any character but `]'.  This makes it possible
	to define macros such as `AC_LANG_PREPROC(Fortran 90)'.
	(scan_m4_files): Quote $key in the regex.  Don't define $expr, it's
	not used.
	(add_file, scan_file): Adjust to the new definitions of $ac_defun_rx
	and $ac_require_rx.
	* tests/aclocal2.test: New file.
	* tests/Makefile.am (TESTS): Add aclocal2.test.
	Reported by Tamara L. Dahlgren and Tom Epperly.

2002-10-11  Alexandre Duret-Lutz  <adl@gnu.org>

	For Debian Bug#153697:
	* lib/am/dejagnu.am (distclean-DEJAGNU): Remove $tool.sum and
	$tool.log.
	Suggested by Andrew Suffield.

2002-10-10  Alexandre Duret-Lutz  <adl@gnu.org>

	For PR automake/369:
	* lib/am/python.am: Lookup python files in build directory or
	source directory.
	From Mathias Doreille.
	* tests/python3.test: New file.
	* tests/Makefile.am (TESTS): Add python3.test.
	* tests/defs: Handle `required=python'.

	For PR automake/358:
	* lib/am/texi-vers.am (%STAMPVTI%): Depend on configure instead of
	configure.ac.
	Suggested by Thien-Thi Nguyen.
	* lib/am/configure.am ($(srcdir)/configure): Depends on
	%CONFIGURE_DEPS%