@@ -103,6 +103,11 @@ then
 	rm -f $priv_check_temp
 	test $overwrite_status = 0 && exit 77
 	;;
+      python)
+	# Python doesn't support --version, it has -V
+	echo "$me: running python -V"
+	( python -V ) || exit 77
+	;;
       tex)
         # No all versions of Tex support `--version', so we use
         # a configure check.
