@@ -1,3 +1,7 @@
+2002-10-25  Charles Wilson  <cwilson@ece.gatech.edu>
+
+	* tests/defs.in: Add explicit stanza for python -V.
+
 2002-10-16  Alexandre Duret-Lutz  <adl@gnu.org>
 
 	* tests/ansi6.test, tests/ansi7.test: Set ac_cv_prog_cc_stdc instead
